--- a/app/base/templates/includes/sidenav.html
+++ b/app/base/templates/includes/sidenav.html
@@ -12,51 +12,15 @@
         <!-- Nav items -->
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link {% if 'index' in segment %} active {% endif %}" href="/">
+            <a class="nav-link {% if 'index' in segment %} active {% endif %}" href="/index">
               <i class="ni ni-tv-2 text-primary"></i>
-              <span class="nav-link-text">Dashboard</span>
+              <span class="nav-link-text">거래현황</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link {% if 'icons' in segment %} active {% endif %}" href="/icons.html">
-              <i class="ni ni-planet text-orange"></i>
-              <span class="nav-link-text">Icons</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link {% if 'map' in segment %} active {% endif %}" href="/map.html">
-              <i class="ni ni-pin-3 text-primary"></i>
-              <span class="nav-link-text">Google</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link {% if 'profile' in segment %} active {% endif %}" href="/profile.html">
-              <i class="ni ni-single-02 text-yellow"></i>
-              <span class="nav-link-text">Profile</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link {% if 'tables' in segment %} active {% endif %}" href="/tables.html">
-              <i class="ni ni-bullet-list-67 text-default"></i>
-              <span class="nav-link-text">Tables</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/login.html">
-              <i class="ni ni-key-25 text-info"></i>
-              <span class="nav-link-text">Login</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/register.html">
-              <i class="ni ni-circle-08 text-pink"></i>
-              <span class="nav-link-text">Register</span>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="{{ url_for('base_blueprint.logout') }}">
-              <i class="ni ni-user-run text-red"></i>
-              <span class="nav-link-text">Logout</span>
+            <a class="nav-link {% if 'alarmii' in segment %} active {% endif %}" href="/alarmii">
+              <i class="ni ni-notification-70 text-orange"></i>
+              <span class="nav-link-text">알라미</span>
             </a>
           </li>
         </ul>
@@ -64,10 +28,10 @@
         <hr class="my-3">
         <!-- Heading -->
         <h6 class="navbar-heading p-0 text-muted">
-          <span class="docs-normal">Resources</span>
+          <span class="docs-normal">코인 정보</span>
         </h6>
         <!-- Navigation -->
-        <ul class="navbar-nav mb-md-3">
+        <!--<ul class="navbar-nav mb-md-3">
           <li class="nav-item">
             <a class="nav-link" href="https://www.creative-tim.com/product/argon-dashboard-flask" target="_blank">
               <i class="ni ni-palette"></i>
@@ -89,7 +53,7 @@
               <span class="nav-link-text">More Starters</span>
             </a>
           </li>
-        </ul>
+        </ul>-->
       </div>
     </div>
   </div>
