--- a/app/home/templates/index.html
+++ b/app/home/templates/index.html
@@ -15,7 +15,7 @@
         setInterval('autoRefresh_div()', 500);
     </script>
     <!-- Header -->
-    <div class="header bg-primary pb-6">
+    <div class="header pb-6" style="background: #0f4c81">
       <div class="container-fluid">
         <div class="header-body">
           <div class="row align-items-center py-4">
