--- a/app/base/templates/includes/navigation.html
+++ b/app/base/templates/includes/navigation.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-top navbar-expand navbar-dark bg-primary border-bottom">
+<nav class="navbar navbar-top navbar-expand navbar-dark border-bottom" style="background: #0f4c81">
   <div class="container-fluid">
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <!-- Search form 
