change logo and primary color

--- a/app/base/templates/layouts/base-fullscreen.html
+++ b/app/base/templates/layouts/base-fullscreen.html
@@ -42,7 +42,7 @@
     {% include "includes/navigation-fullscreen.html" %}
 
     <!-- Header -->
-    <div class="header bg-gradient-primary py-7 py-lg-8">
+    <div class="header py-7 py-lg-8" style="background: #0f4c81">
       <div class="container">
         <div class="header-body text-center mb-7">
           <div class="row justify-content-center">
