--- a/app/home/templates/alarmii.html
+++ b/app/home/templates/alarmii.html
@@ -8,7 +8,7 @@
 {% block content %}
 
     <!-- Header -->
-    <div class="header bg-primary pb-8 pt-5 pt-md-8">
+    <div class="header pb-8 pt-5 pt-md-8" style="background: #0f4c81">
       <div class="container-fluid">
         <div class="header-body">
           <!-- Card stats -->
