--- a/app/home/templates/map.html
+++ b/app/home/templates/map.html
@@ -5,7 +5,7 @@
 {% block content %}
 
     <!-- Header -->
-    <div class="header bg-primary pb-6">
+    <div class="header pb-6" style="background: #0f4c81">
       <div class="container-fluid">
         <div class="header-body">
           <div class="row align-items-center py-4">
